# ebreaktime

./: README.md  meson.build  meson_options.txt
cli/: Main.vala  meson.build
data/: application.css  io.elementary.ebreaktime.desktop  io.elementary.ebreaktime.gresource.xml  io.elementary.ebreaktime.gschema.xml  io.elementary.ebreaktime.policy  io.elementary.ebreaktime.service.in  io.elementary.ebreaktimed.desktop  meson.build
po/: io.elementary.ebreaktime.pot  ru.po
src/: Application.vala  MainWindow.vala  meson.build
src/Common/: Client.vala  Constants.vala  PAM.vala  SettingsManager.vala  Utils.vala  meson.build
src/Core/: AbstractManager.vala  AccessManager.vala  BreakManager.vala  BreakWidget.vala  DBusService.vala  Daemon.vala  Timer.vala  Utils.vala  meson.build
src/Indicator/: Indicator.vala  Popover.vala  meson.build
src/Widgets/: Access.vala  Break.vala  CustomGrid.vala  ServiceItem.vala  Settings.vala  WeekSpinBox.vala
vapi/: xscrnsaver.vapi
