common_files_minimal = files(
    'Constants.vala',
    'PAM.vala'
)

common_files = common_files_minimal
common_files += files (
  'SettingsManager.vala'
)

client_files = common_files
client_files += files(
    'Client.vala'
)

ex_client_files = client_files
ex_client_files += files (
    'Utils.vala'
)
